--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,158 +6,149 @@
     android:layout_height="match_parent"
     tools:context=".auth.LoginActivity"
     android:background="@color/bgColor"
-    android:padding="30dp"
     android:scrollbarSize="0dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+       >
 
-        <ImageView
-            android:id="@+id/back_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/back_arrow"
-            android:backgroundTint="@color/blue"
-             />
 
         <TextView
+            android:id="@+id/btnSkip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:fontFamily="@font/muli_bold"
-            android:text="Login"
-            android:textAllCaps="true"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:text="@string/skip_login"
             android:textColor="@color/blue"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="vertical"
-            android:layout_marginTop="80dp">
+            android:padding="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnSkip">
 
-            <com.google.android.material.textfield.TextInputLayout
+
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Enter Email"
-                app:hintTextColor="@color/black"
-                app:boxStrokeColor="@color/blue"
-                app:boxStrokeWidthFocused="2dp"
-                app:startIconDrawable="@drawable/email_icon"
-                app:startIconTint="@color/blue"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/blue"
-                android:layout_marginTop="10dp"
-                android:textColorHint="#808080"
-
-
-                >
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/evEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/muli_bold"
-                    android:inputType="textEmailAddress"
-                    android:textColor="@color/black" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-
-                <CheckBox
-                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:buttonTint="@color/blue"
-                    android:text="Remember Me"
-                    android:textColor="@color/black"
-
-                    />
-
-
-            </RelativeLayout>
-
-            <Button
-                android:id="@+id/btnLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/blue"
-                android:text="Next"
-                android:textColor="@color/white"
-                android:layout_marginTop="20dp"
-                />
-
-            <Button
-                android:id="@+id/btnRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Register"
-                android:layout_marginTop="20dp"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:background="#00000000"
+                android:layout_height="240dp"
                 android:layout_gravity="center"
-                android:textSize="14sp"
-
-
-                />
-
+                android:src="@drawable/app_img" />
 
             <LinearLayout
                 android:id="@+id/loading"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:gravity="center">
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/animation_view"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    app:lottie_rawRes="@raw/loading"
-                    app:lottie_loop="true"
-                    app:lottie_autoPlay="true" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Please Wait ..."
 
-                />
+                    app:lottie_autoPlay="true"
+
+                    app:lottie_loop="true"
+
+                    app:lottie_rawRes="@raw/loading" />
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/muli_bold"
+                android:text="Idea Lab"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@color/blue"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/muli_bold"
+                android:text="LNCT, Bhopal"
+                android:textAlignment="center"
+                android:textColor="@color/blue" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="40dp"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Phone"
+                    android:textColorHint="#808080"
+                    app:boxStrokeColor="@color/blue"
+                    app:boxStrokeWidthFocused="2dp"
+                    app:endIconMode="clear_text"
+                    app:endIconTint="@color/blue"
+                    app:hintTextColor="@color/black"
+                    app:startIconDrawable="@drawable/call"
+                    app:startIconTint="@color/blue"
+
+
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/evEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/muli_bold"
+                        android:maxEms="10"
+                        android:inputType="phone"
+                        android:textColor="@color/black" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/blue"
+                    android:text="Next"
+                    android:textColor="@color/white" />
 
 
             </LinearLayout>
 
 
-
-
-
-
         </LinearLayout>
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-
-
-
-
-    </LinearLayout>
 
 
 </ScrollView>
