static app commit

--- a/app/src/main/res/layout/event_recycler_layout.xml
+++ b/app/src/main/res/layout/event_recycler_layout.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/event_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/error"
+                android:src="@drawable/idea_lab_sq_logo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
