--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,11 +60,8 @@
                     android:id="@+id/animation_view"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-
                     app:lottie_autoPlay="true"
-
                     app:lottie_loop="true"
-
                     app:lottie_rawRes="@raw/loading" />
 
 
@@ -91,6 +88,8 @@
                 android:text="LNCT, Bhopal"
                 android:textAlignment="center"
                 android:textColor="@color/blue" />
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -119,7 +118,7 @@
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/evEmail"
+                        android:id="@+id/evPhone"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/muli_bold"
