--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -151,6 +151,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/evPhNo"
+                    android:maxEms="10"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/muli_bold"
