--- a/app/src/main/res/layout/otp_verification_layout.xml
+++ b/app/src/main/res/layout/otp_verification_layout.xml
@@ -37,13 +37,13 @@
                 android:text="We have sent verification code to."/>
 
             <TextView
-                android:id="@+id/tvEmail"
+                android:id="@+id/tvPhone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:textColor="#CC000000"
-                android:text="user@gmail.com"
+                android:text="+91 XXXXXXXXX"
                 android:textStyle="bold"/>
 
             <LinearLayout
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:weightSum="4"
+                android:weightSum="6"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
@@ -61,7 +61,6 @@
                     android:id="@+id/otpET1"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
                     android:gravity="center"
                     android:inputType="number"
                     android:maxLines="1"
@@ -74,9 +73,8 @@
                 <EditText
                     android:id="@+id/otpET2"
                     android:layout_width="50dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="6dp"
                     android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
                     android:gravity="center"
                     android:inputType="number"
                     android:maxLines="1"
@@ -89,9 +87,8 @@
                 <EditText
                     android:id="@+id/otpET3"
                     android:layout_width="50dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="6dp"
                     android:layout_height="50dp"
-                    android:layout_marginEnd="10dp"
                     android:gravity="center"
                     android:inputType="number"
                     android:maxLines="1"
@@ -104,7 +101,36 @@
                 <EditText
                     android:id="@+id/otpET4"
                     android:layout_width="50dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:background="@drawable/round_back_blue"/>
+
+                <EditText
+                    android:id="@+id/otpET5"
+                    android:layout_width="50dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_height="50dp"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:background="@drawable/round_back_blue"/>
+
+
+                <EditText
+                    android:id="@+id/otpET6"
+                    android:layout_width="50dp"
+                    android:layout_marginStart="6dp"
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:inputType="number"
