--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.HomeActivity"
+    tools:context="com.lnct.bhopal.ac.in.idealab.activity.HomeActivity"
     tools:openDrawer="start"
     android:id="@+id/nav_drawer"
     android:fitsSystemWindows="true"
