--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     android:background="@color/bgColor"
-    tools:context=".auth.RegisterActivity"
+    tools:context="com.lnct.bhopal.ac.in.idealab.auth.RegisterActivity"
     android:scrollbarSize="0dp"
     >
 
@@ -196,20 +196,6 @@
                 android:text="REGISTER"
                 android:textColor="@color/white"
                  />
-
-<!--            <Button-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Organisation Registeration"-->
-<!--                android:layout_marginTop="20dp"-->
-<!--                android:textAllCaps="true"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:background="#00000000"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:textSize="14sp"-->
-
-<!--                />-->
-
 
 
 
