--- a/app/src/main/res/layout/activity_show_score.xml
+++ b/app/src/main/res/layout/activity_show_score.xml
@@ -6,7 +6,7 @@
     android:background="#D67F6B"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".quiz.ShowScoreActivity">
+    tools:context="com.lnct.bhopal.ac.in.idealab.quiz.ShowScoreActivity">
 
     <ImageView
         android:id="@+id/imageView4"
