--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/bgColor"
     android:gravity="center"
-    tools:context=".activity.SplashScreen">
+    tools:context="com.lnct.bhopal.ac.in.idealab.activity.SplashScreen">
 
     <LinearLayout
         android:id="@+id/icon_holder"
