--- a/app/src/main/res/layout/activity_wrong.xml
+++ b/app/src/main/res/layout/activity_wrong.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D67F6B"
-    tools:context=".quiz.WrongActivity">
+    tools:context="com.lnct.bhopal.ac.in.idealab.quiz.WrongActivity">
 
     <ImageView
         android:id="@+id/imageView6"
