--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".frgments.ProjectFragment">
+    tools:context="com.lnct.bhopal.ac.in.idealab.frgments.ProjectFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/nonet"
