--- a/app/src/main/res/layout/fragment_quiz_welcome.xml
+++ b/app/src/main/res/layout/fragment_quiz_welcome.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
     android:gravity="center"
-    tools:context=".quiz.QuizWelcomeFragment">
+    tools:context="com.lnct.bhopal.ac.in.idealab.quiz.QuizWelcomeFragment">
 
 <!--    D67F6B-->
 
