--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,23 +14,38 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/userimage_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/user_name_nav"
-        app:layout_constraintTop_toTopOf="@+id/user_name_nav"
-        tools:layout_editor_absoluteX="16dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="32dp"/>
 
     <TextView
+        android:layout_marginEnd="4dp"
         android:id="@+id/user_name_nav"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:layout_toRightOf="@+id/user_imageView"
         android:text="User Name"
         android:textColor="#fff"
         android:textSize="20sp"
-        android:layout_marginLeft="20sp"
-        android:layout_marginBottom="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/user_imageView"
+        app:layout_constraintEnd_toStartOf="@+id/view_profile_button"
+        app:layout_constraintStart_toEndOf="@+id/user_imageView"
+        app:layout_constraintTop_toTopOf="@+id/user_imageView" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/view_profile_button"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/profile_arrow"
+        android:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/user_imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/user_imageView" />
+        app:layout_constraintTop_toTopOf="@+id/user_imageView"
+        tools:ignore="MissingConstraints" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
