--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,6 +113,7 @@
                         android:layout_height="match_parent"
                         android:fontFamily="@font/muli_bold"
                         android:maxEms="10"
+                        android:maxLength="10"
                         android:inputType="phone"
                         android:textColor="@color/black" />
 
