--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
+    android:padding="24dp"
     android:background="@color/bgColor"
     tools:context="com.lnct.bhopal.ac.in.idealab.auth.RegisterActivity"
     android:scrollbarSize="0dp"
     >
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +26,8 @@
             android:textAllCaps="true"
             android:textColor="@color/blue"
             android:textSize="40sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,22 +35,21 @@
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="10dp"
                 android:hint="Enter Name"
-                app:hintTextColor="@color/black"
+                android:textColorHint="#808080"
                 app:boxStrokeColor="@color/blue"
                 app:boxStrokeWidthFocused="2dp"
-                app:startIconDrawable="@drawable/id_card"
-                app:startIconTint="@color/blue"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/blue"
-                android:layout_marginTop="10dp"
-                android:textColorHint="#808080"
+                app:hintTextColor="@color/black"
+                app:startIconDrawable="@drawable/id_card"
 
 
-                >
+                app:startIconTint="@color/blue">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/evName"
@@ -134,6 +135,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:hint="Semester"
+                app:hintTextColor="@color/black"
+                app:boxStrokeColor="@color/blue"
+                app:boxStrokeWidthFocused="2dp"
+                app:startIconDrawable="@drawable/semester"
+                app:startIconTint="@color/blue"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/blue"
+                android:layout_marginTop="10dp"
+                android:textColorHint="#808080"
+
+
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/evSem"
+                    android:maxEms="1"
+                    android:maxLength="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/muli_bold"
+                    android:inputType="number"
+                    android:textColor="@color/black" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:hint="Whatsapp Number"
                 app:hintTextColor="@color/black"
                 app:boxStrokeColor="@color/blue"
@@ -151,6 +183,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/evPhNo"
                     android:maxEms="10"
+                    android:maxLength="10"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/muli_bold"
@@ -248,7 +281,7 @@
 
             <LinearLayout
                 android:id="@+id/loading"
-               android:visibility="gone"
+                android:visibility="gone"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:orientation="vertical"
@@ -277,17 +310,19 @@
                 android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:backgroundTint="@color/blue"
                 android:text="REGISTER"
                 android:textColor="@color/white"
-                 />
+                />
 
 
 
 
 
         </LinearLayout>
+
+
 
 
 
