--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/bgColor</item>
         <!-- Status bar -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/bgColor</item>
+        <item name="android:windowLightStatusBar">true</item>
 <!--        <item name="windowActionBar">false</item>-->
 <!--        <item name="windowNoTitle">false</item>-->
         <!-- Customize your theme here. -->
