--- a/app/src/main/res/drawable/gray_curved_background.xml
+++ b/app/src/main/res/drawable/gray_curved_background.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
+<!--    <solid-->
+<!--        android:color="#59C5C5C5"/>-->
+
     <solid
-        android:color="#59C5C5C5"/>
+        android:color="@color/white"/>
 
     <corners
-        android:radius="0sp"/>
+        android:radius="5sp"/>
 
     <padding
         android:bottom="10sp"
