--- a/app/src/main/res/layout/activity_full_screen_event.xml
+++ b/app/src/main/res/layout/activity_full_screen_event.xml
@@ -28,11 +28,11 @@
             <ImageView
                 android:id="@+id/backbtn"
                 android:layout_width="50sp"
-                android:layout_height="35sp"
+                android:layout_height="40sp"
+                android:layout_margin="10sp"
                 android:src="@drawable/back_btn"
-                app:layout_constraintBottom_toBottomOf="@+id/cardView3"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/cardView3" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView3"
@@ -49,9 +49,8 @@
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="25sp"
                     android:paddingVertical="10sp"
-                    android:background="@color/blue"
                     android:text="Register"
-                    android:textColor="@color/white"
+                    android:textColor="@color/blue"
                     android:textSize="15sp" />
             </androidx.cardview.widget.CardView>
 
@@ -59,22 +58,20 @@
                 android:id="@+id/image_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginHorizontal="20sp"
                 app:cardElevation="0dp"
-                android:layout_marginTop="10sp"
-                app:strokeColor="@color/blue"
-                app:strokeWidth="2sp"
-                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintDimensionRatio="3:4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView3">
+                app:layout_constraintTop_toBottomOf="@+id/backbtn">
 
                 <ImageView
                     android:id="@+id/event_imageholder"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/event_image"
                     android:layout_margin="2sp"
-                    android:elevation="10sp"/>
+                    android:elevation="10sp"
+                    android:src="@drawable/idea_lab_sq_logo" />
 
             </com.google.android.material.card.MaterialCardView>
 
@@ -82,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20sp"
-                android:layout_marginBottom="-10sp"
+                app:layout_goneMarginTop="10sp"
                 app:cardElevation="10sp"
                 app:cardCornerRadius="20sp"
                 android:layout_marginTop="-60sp"
