--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -165,6 +165,7 @@
             </com.google.android.material.card.MaterialCardView>
 
 
+
             <TextView
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
@@ -333,6 +334,17 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
+                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/skills_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:contentDescription="My Skills"
+                    android:text="My Skills"
+                    android:layout_marginTop="10dp"
+                    app:icon="@drawable/ic_add_24"/>
+
                 <LinearLayout
                     android:id="@+id/loading"
                     android:layout_width="50dp"
@@ -366,6 +378,9 @@
                     android:backgroundTint="@color/blue"
                     android:text="Update"
                     android:textColor="@color/white" />
+
+
+
 
 
             </LinearLayout>
