--- a/app/src/main/res/layout/activity_full_screen_event.xml
+++ b/app/src/main/res/layout/activity_full_screen_event.xml
@@ -25,33 +25,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/backbtn"
-                android:layout_width="50sp"
-                android:layout_height="40sp"
-                android:layout_margin="10sp"
-                android:src="@drawable/back_btn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+<!--            <ImageView-->
+<!--                android:id="@+id/backbtn"-->
+<!--                android:layout_width="50sp"-->
+<!--                android:layout_height="40sp"-->
+<!--                android:layout_margin="10sp"-->
+<!--                android:src="@drawable/back_btn"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
             <androidx.cardview.widget.CardView
+                app:cardCornerRadius="50dp"
+                app:cardElevation="10dp"
                 android:id="@+id/cardView3"
+                android:layout_marginTop="32dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
-                android:layout_marginEnd="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/image_cardview">
 
                 <TextView
                     android:id="@+id/registerbtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:paddingHorizontal="25sp"
                     android:paddingVertical="10sp"
                     android:text="Register"
                     android:textColor="@color/blue"
                     android:textSize="15sp" />
+
             </androidx.cardview.widget.CardView>
 
             <com.google.android.material.card.MaterialCardView
@@ -63,7 +68,7 @@
                 app:layout_constraintDimensionRatio="3:4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/backbtn">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/event_imageholder"
@@ -71,6 +76,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="2sp"
                     android:elevation="10sp"
+                    android:layout_gravity="center"
                     android:src="@drawable/idea_lab_sq_logo" />
 
             </com.google.android.material.card.MaterialCardView>
@@ -82,7 +88,7 @@
                 app:layout_goneMarginTop="10sp"
                 app:cardElevation="10sp"
                 app:cardCornerRadius="20sp"
-                android:layout_marginTop="-60sp"
+                android:layout_marginTop="-50sp"
                 app:layout_constraintTop_toBottomOf="@id/image_cardview">
 
                 <LinearLayout
