--- a/app/src/main/res/layout/fragment_fullscreen_event.xml
+++ b/app/src/main/res/layout/fragment_fullscreen_event.xml
@@ -38,11 +38,13 @@
             android:id="@+id/cardView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_marginEnd="10sp"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="10dp"
             android:elevation="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="18dp"
+            app:layout_constraintEnd_toEndOf="@+id/image_cardview"
+            app:layout_constraintTop_toTopOf="@+id/image_cardview">
 
             <TextView
                 android:id="@+id/registerbtn"
@@ -84,7 +86,7 @@
             app:layout_goneMarginTop="10sp"
             app:cardElevation="10sp"
             app:cardCornerRadius="20sp"
-            android:layout_marginTop="-60sp"
+            android:layout_marginTop="-20sp"
             app:layout_constraintTop_toBottomOf="@id/image_cardview">
 
             <LinearLayout
