--- a/app/src/main/res/layout/upcoming_events_recycler.xml
+++ b/app/src/main/res/layout/upcoming_events_recycler.xml
@@ -40,13 +40,14 @@
                 android:layout_width="0dp"
                 android:layout_height="80sp"
                 android:layout_marginStart="5sp"
-                android:layout_marginTop="25sp"
                 android:background="@color/white"
                 android:gravity="bottom"
                 android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/event_image"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.38">
 
                 <TextView
                     android:id="@+id/event_title"
@@ -54,10 +55,10 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
                     android:marqueeRepeatLimit="marquee_forever"
-                    android:maxLines="1"
+                    android:maxLines="2"
                     android:text="No Upcoming Events"
                     android:textColor="@color/blue"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <TextView
