--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -43,8 +43,7 @@
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/user_imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/user_imageView"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toTopOf="@+id/user_imageView" />
 
 
 
